Réorganisation du projet : backend déplacé dans /backend